[package]
name = "rsa-calculator"
version = "0.1.0"
authors = ["Marcin Zepp <nircek-2103@protonmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
opt-level = "s"
